--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,7 +1,5 @@
 apply plugin: 'com.android.application'
-
 apply plugin: 'kotlin-android'
-
 apply plugin: 'kotlin-android-extensions'
 
 android {
@@ -24,12 +22,22 @@ android {
 }
 
 dependencies {
+    def mainApplicationDependencies = rootProject.ext.mainApplicationDependencies
+    def unitTestDependencies = rootProject.ext.unitTestDependencies
+    def uiTestDependencies = rootProject.ext.uiTestDependencies
+
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation"org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
-    implementation 'androidx.appcompat:appcompat:1.1.0'
-    implementation 'androidx.core:core-ktx:1.1.0'
-    implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
-    testImplementation 'junit:junit:4.12'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.0'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
+
+    // Main Application dependencies
+    implementation mainApplicationDependencies.appCompat
+    implementation mainApplicationDependencies.coreKtx
+    implementation mainApplicationDependencies.constraintLayout
+    implementation mainApplicationDependencies.kotlin
+    implementation mainApplicationDependencies.material
+
+    // Unit tests dependencies
+    testImplementation unitTestDependencies.junit
+
+    // UI tests dependencies
+    androidTestImplementation uiTestDependencies.espressoCore
 }
