--- a/buildsystem/dependencies.gradle
+++ b/buildsystem/dependencies.gradle
@@ -4,6 +4,10 @@ ext {
     coreKtx_version = '1.1.0'
     constraintLayout_version = '1.1.3'
     material_version = '1.0.0'
+    koinAndroid_version = '2.0.1'
+    koinAndroidScope_version = '2.0.1'
+    koinAndroidViewModel_version = '2.0.1'
+    glide_version = '4.10.0'
 
     //Third party libraries
 
@@ -15,11 +19,15 @@ ext {
     espressoCore_version = '3.2.0'
 
     mainApplicationDependencies = [
-            appCompat       : "androidx.appcompat:appcompat:$appCompat_version",
-            coreKtx         : "androidx.core:core-ktx:$coreKtx_version",
-            constraintLayout: "androidx.constraintlayout:constraintlayout:$constraintLayout_version",
-            kotlin          : "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version",
-            material        : "com.google.android.material:material:$material_version",
+            appCompat           : "androidx.appcompat:appcompat:$appCompat_version",
+            coreKtx             : "androidx.core:core-ktx:$coreKtx_version",
+            constraintLayout    : "androidx.constraintlayout:constraintlayout:$constraintLayout_version",
+            kotlin              : "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version",
+            material            : "com.google.android.material:material:$material_version",
+            koinAndroid         : "org.koin:koin-android:$koinAndroid_version",
+            koinAndroidScope    : "org.koin:koin-android-scope:$koinAndroidScope_version",
+            koinAndroidViewModel: "org.koin:koin-android-viewmodel:$koinAndroidViewModel_version",
+            glide               : "com.github.bumptech.glide:glide:$glide_version",
     ]
 
     unitTestDependencies = [
