--- a/app/build.gradle
+++ b/app/build.gradle
@@ -15,9 +15,17 @@ android {
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
     buildTypes {
+        debug {
+            // Just to show that we can change the configs on Debug environment
+            buildConfigField "String", "OMBD_API", "\"https://www.omdbapi.com\""
+            buildConfigField "String", "OMBD_API_KEY", "\"API_KEY\""
+        }
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+
+            buildConfigField "String", "OMBD_API", "\"https://www.omdbapi.com\""
+            buildConfigField "String", "OMBD_API_KEY", "\"API_KEY\""
         }
     }
     dataBinding {
@@ -42,6 +50,12 @@ dependencies {
     implementation mainApplicationDependencies.koinAndroidScope
     implementation mainApplicationDependencies.koinAndroidViewModel
     implementation mainApplicationDependencies.glide
+    implementation mainApplicationDependencies.kotlinCoroutinesCore
+    implementation mainApplicationDependencies.kotlinCoroutinesAndroid
+    implementation mainApplicationDependencies.gson
+    implementation mainApplicationDependencies.retrofit
+    implementation mainApplicationDependencies.retrofitConverterGson
+
     annotationProcessor mainApplicationDependencies.glide
 
     // Unit tests dependencies
