--- a/buildsystem/dependencies.gradle
+++ b/buildsystem/dependencies.gradle
@@ -8,6 +8,10 @@ ext {
     koinAndroidScope_version = '2.0.1'
     koinAndroidViewModel_version = '2.0.1'
     glide_version = '4.10.0'
+    kotlinCoroutinesCore_version = '1.3.2'
+    gson_version = '2.8.6'
+    retrofit_version = '2.6.1'
+    retrofit_version = '2.6.1'
 
     //Third party libraries
 
@@ -19,15 +23,20 @@ ext {
     espressoCore_version = '3.2.0'
 
     mainApplicationDependencies = [
-            appCompat           : "androidx.appcompat:appcompat:$appCompat_version",
-            coreKtx             : "androidx.core:core-ktx:$coreKtx_version",
-            constraintLayout    : "androidx.constraintlayout:constraintlayout:$constraintLayout_version",
-            kotlin              : "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version",
-            material            : "com.google.android.material:material:$material_version",
-            koinAndroid         : "org.koin:koin-android:$koinAndroid_version",
-            koinAndroidScope    : "org.koin:koin-android-scope:$koinAndroidScope_version",
-            koinAndroidViewModel: "org.koin:koin-android-viewmodel:$koinAndroidViewModel_version",
-            glide               : "com.github.bumptech.glide:glide:$glide_version",
+            appCompat              : "androidx.appcompat:appcompat:$appCompat_version",
+            coreKtx                : "androidx.core:core-ktx:$coreKtx_version",
+            constraintLayout       : "androidx.constraintlayout:constraintlayout:$constraintLayout_version",
+            kotlin                 : "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version",
+            material               : "com.google.android.material:material:$material_version",
+            koinAndroid            : "org.koin:koin-android:$koinAndroid_version",
+            koinAndroidScope       : "org.koin:koin-android-scope:$koinAndroidScope_version",
+            koinAndroidViewModel   : "org.koin:koin-android-viewmodel:$koinAndroidViewModel_version",
+            glide                  : "com.github.bumptech.glide:glide:$glide_version",
+            kotlinCoroutinesCore   : "org.jetbrains.kotlinx:kotlinx-coroutines-core:$kotlinCoroutinesCore_version",
+            kotlinCoroutinesAndroid: "org.jetbrains.kotlinx:kotlinx-coroutines-android:$kotlinCoroutinesCore_version",
+            gson                   : "com.google.code.gson:gson:$gson_version",
+            retrofit               : "com.squareup.retrofit2:retrofit:$retrofit_version",
+            retrofitConverterGson  : "com.squareup.retrofit2:converter-gson:$retrofit_version",
     ]
 
     unitTestDependencies = [
