Move all code from Data Layer to the Data Module

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,7 +20,7 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".base.BaseActivity"
+            android:name="com.kennedydias.libermovies.ui.base.BaseActivity"
             android:theme="@style/AppTheme" />
     </application>
 
