--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,6 +33,7 @@ dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation project(path: ':data')
     implementation project(path: ':domain')
+    implementation project(path: ':common')
 
     // Main Application dependencies
     implementation mainApplicationDependencies.appCompat
