--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,9 +41,9 @@ dependencies {
     implementation mainApplicationDependencies.constraintLayout
     implementation mainApplicationDependencies.kotlin
     implementation mainApplicationDependencies.material
-    implementation mainApplicationDependencies.koinAndroid
-    implementation mainApplicationDependencies.koinAndroidScope
-    implementation mainApplicationDependencies.koinAndroidViewModel
+    implementation mainApplicationDependencies.koinCore
+    implementation mainApplicationDependencies.koinAndroidXScope
+    implementation mainApplicationDependencies.koinAndroidXViewModel
     implementation mainApplicationDependencies.glide
     implementation mainApplicationDependencies.kotlinCoroutinesCore
     implementation mainApplicationDependencies.kotlinCoroutinesAndroid
@@ -55,6 +55,7 @@ dependencies {
 
     // Unit tests dependencies
     testImplementation unitTestDependencies.junit
+    testImplementation mainApplicationDependencies.koinTest
 
     // UI tests dependencies
     androidTestImplementation uiTestDependencies.espressoCore
