--- a/buildsystem/dependencies.gradle
+++ b/buildsystem/dependencies.gradle
@@ -4,13 +4,10 @@ ext {
     coreKtx_version = '1.1.0'
     constraintLayout_version = '1.1.3'
     material_version = '1.0.0'
-    koinAndroid_version = '2.0.1'
-    koinAndroidScope_version = '2.0.1'
-    koinAndroidViewModel_version = '2.0.1'
+    koin_version = '2.0.1'
     glide_version = '4.10.0'
     kotlinCoroutinesCore_version = '1.3.2'
     gson_version = '2.8.6'
-    retrofit_version = '2.6.1'
     retrofit_version = '2.6.1'
 
     //Third party libraries
@@ -28,9 +25,10 @@ ext {
             constraintLayout       : "androidx.constraintlayout:constraintlayout:$constraintLayout_version",
             kotlin                 : "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version",
             material               : "com.google.android.material:material:$material_version",
-            koinAndroid            : "org.koin:koin-android:$koinAndroid_version",
-            koinAndroidScope       : "org.koin:koin-android-scope:$koinAndroidScope_version",
-            koinAndroidViewModel   : "org.koin:koin-android-viewmodel:$koinAndroidViewModel_version",
+            koinCore               : "org.koin:koin-core:$koin_version",
+            koinTest               : "org.koin:koin-test:$koin_version",
+            koinAndroidXScope      : "org.koin:koin-androidx-scope:$koin_version",
+            koinAndroidXViewModel  : "org.koin:koin-androidx-viewmodel:$koin_version",
             glide                  : "com.github.bumptech.glide:glide:$glide_version",
             kotlinCoroutinesCore   : "org.jetbrains.kotlinx:kotlinx-coroutines-core:$kotlinCoroutinesCore_version",
             kotlinCoroutinesAndroid: "org.jetbrains.kotlinx:kotlinx-coroutines-android:$kotlinCoroutinesCore_version",
