Add Room library to data module
Adding Room to data module and making some fixes

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -55,7 +55,7 @@ dependencies {
 
     // Unit tests dependencies
     testImplementation unitTestDependencies.junit
-    testImplementation mainApplicationDependencies.koinTest
+    testImplementation unitTestDependencies.koinTest
 
     // UI tests dependencies
     androidTestImplementation uiTestDependencies.espressoCore
