--- a/domain/build.gradle
+++ b/domain/build.gradle
@@ -42,7 +42,7 @@ dependencies {
 
     // Unit tests dependencies
     testImplementation unitTestDependencies.junit
-    testImplementation mainApplicationDependencies.koinTest
+    testImplementation unitTestDependencies.koinTest
 
     // UI tests dependencies
     androidTestImplementation uiTestDependencies.espressoCore
