--- a/buildsystem/dependencies.gradle
+++ b/buildsystem/dependencies.gradle
@@ -9,6 +9,7 @@ ext {
     kotlinCoroutinesCore_version = '1.3.2'
     gson_version = '2.8.6'
     retrofit_version = '2.6.1'
+    room_version = '2.2.1'
 
     //Third party libraries
 
@@ -26,7 +27,6 @@ ext {
             kotlin                 : "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version",
             material               : "com.google.android.material:material:$material_version",
             koinCore               : "org.koin:koin-core:$koin_version",
-            koinTest               : "org.koin:koin-test:$koin_version",
             koinAndroidXScope      : "org.koin:koin-androidx-scope:$koin_version",
             koinAndroidXViewModel  : "org.koin:koin-androidx-viewmodel:$koin_version",
             glide                  : "com.github.bumptech.glide:glide:$glide_version",
@@ -35,10 +35,15 @@ ext {
             gson                   : "com.google.code.gson:gson:$gson_version",
             retrofit               : "com.squareup.retrofit2:retrofit:$retrofit_version",
             retrofitConverterGson  : "com.squareup.retrofit2:converter-gson:$retrofit_version",
+            RoomRuntime            : "androidx.room:room-runtime:$room_version",
+            RoomCompiler           : "androidx.room:room-compiler:$room_version",
+            RoomKtx                : "androidx.room:room-ktx:$room_version",
     ]
 
     unitTestDependencies = [
-            junit: "junit:junit:$junit_version"
+            junit      : "junit:junit:$junit_version",
+            koinTest   : "org.koin:koin-test:$koin_version",
+            RoomTesting: "androidx.room:room-testing:$room_version",
     ]
 
     uiTestDependencies = [
