--- a/data/build.gradle
+++ b/data/build.gradle
@@ -1,6 +1,8 @@
 apply plugin: 'com.android.library'
 apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
+apply plugin: 'kotlin-kapt'
+
 android {
     compileSdkVersion 29
     buildToolsVersion "29.0.2"
@@ -46,10 +48,14 @@ dependencies {
     implementation mainApplicationDependencies.gson
     implementation mainApplicationDependencies.retrofit
     implementation mainApplicationDependencies.retrofitConverterGson
+    implementation mainApplicationDependencies.RoomRuntime
+    implementation mainApplicationDependencies.RoomKtx
+    kapt mainApplicationDependencies.RoomCompiler
 
     // Unit tests dependencies
     testImplementation unitTestDependencies.junit
-    testImplementation mainApplicationDependencies.koinTest
+    testImplementation unitTestDependencies.koinTest
+    testImplementation unitTestDependencies.RoomTesting
 
     // UI tests dependencies
     androidTestImplementation uiTestDependencies.espressoCore
